--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <input type="radio" name="category" value="18" /> <span>Computer</span>
         </label>
         <label>
-            <input type="radio" name="category" value="" /> <span>Open</span>
+            <input type="radio" name="category" value="20" /> <span>Open</span>
         </label>
     </div>
 
